# cpp_study

./: .gitignore  CMakeLists.txt  hello.cpp  print_log.c  queens.cpp  task8.cpp  task_pract_3.txt  tasks_safeboard.txt  test.cpp  test10.cpp  test11.cpp  test5.cpp  test7.cpp  test8.cpp  test9.cpp  test_cpy_speed.cpp  yandex_cup_test_round_alg.txt
TopSystem/case_1/: CMakeLists.txt  README.txt  example.cpp  example.hpp  test.cpp  wrap_error.hpp
TopSystem/case_2/: CMakeLists.txt  README.txt  color.cpp  color.hpp  linear_size.cpp  linear_size.hpp  pool_of_surfaces.cpp  pool_of_surfaces.hpp  surface.cpp  surface.hpp
TopSystem/case_3/: CMakeLists.txt  README.txt  contracts.hpp  server_provider.cpp  server_provider.hpp  test.cpp
TopSystem/test_task/: CMakeLists.txt  README.txt  main.cpp
TopSystem/test_task/simple_2D_lib/: CMakeLists.txt
TopSystem/test_task/simple_2D_lib/includes/: camera.hpp  color.hpp  default_painter.hpp  default_shapes.hpp  defaults.hpp  engine.hpp  painter.hpp  shape.hpp  vertex_shader.hpp
TopSystem/test_task/simple_2D_lib/includes/default_shapes/: line.hpp
TopSystem/test_task/simple_2D_lib/sources/: camera.cpp  color.cpp  default_painter.cpp  default_shapes.cpp  engine.cpp  painter.cpp  shape.cpp  vertex_shader.cpp
TopSystem/test_task/simple_2D_lib/sources/default_shapes/: line.cpp
calc/: main.cpp  queens.cpp
fast_language_tests/: test1.cpp  test12.cpp  test14.cpp  test2.cpp  test3.cpp  test4.cpp  test6.cpp  test_why_protect_malloc.cpp
safeboard/hack/: tasks_safeboard.txt
safeboard/hack/task_1/: innput.txt  solve.cpp
safeboard/hack/task_2/: solve.cpp
safeboard/hack/task_5/: solve.cpp
safeboard/hack/task_6/: solve.cpp
safeboard/hack/task_7/: error.hpp  solve.cpp  solve_old.cpp
safeboard/hack/task_8/: log1.txt  log2.txt  log3.txt
safeboard/hack/task_9/: contracts.hpp  server_provider.cpp  server_provider.hpp  test.cpp
safeboard/online/: task1.cpp  task2.cpp
yandex_cup/: task_1.cpp
